[gd_scene load_steps=5 format=3 uid="uid://b4rmc4llx8n4e"]

[ext_resource type="Script" path="res://scripts/scene_manager.gd" id="1_olmep"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="2_gp0t8"]
[ext_resource type="Resource" uid="uid://cxd0gvobver6i" path="res://data/itemlist/default.tres" id="2_lunl4"]
[ext_resource type="Script" path="res://scripts/saver_loader.gd" id="3_vhwh1"]

[node name="SceneManager" type="Node"]
script = ExtResource("1_olmep")
base_itemlist = ExtResource("2_lunl4")
reset_memories_rate = 5

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_gp0t8")

[node name="VBox" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="Menu/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Riprendi"

[node name="Save" type="Button" parent="Menu/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Salva"

[node name="MainMenu" type="Button" parent="Menu/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Esci"

[node name="Utils" type="Node" parent="."]

[node name="SaverLoader" type="Node" parent="Utils"]
unique_name_in_owner = true
script = ExtResource("3_vhwh1")

[connection signal="pressed" from="Menu/VBox/Continue" to="Menu" method="_on_continue_pressed"]
[connection signal="pressed" from="Menu/VBox/Save" to="Menu" method="_on_save_pressed"]
[connection signal="pressed" from="Menu/VBox/MainMenu" to="Menu" method="_on_main_menu_pressed"]
